# Estacao-Meteorologica

./: CMakeLists.txt  README.md  bmp_aht_disp.c  server.c
lib/: globals.h  lwipopts.h  server.h
